# oxieml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  package.json
benches/: eval_bench.rs
src/: autodiff.rs  canonical.rs  compile.rs  error.rs  eval.rs  grad.rs  integrate.rs  integrate_subst.rs  jit.rs  lib.rs  limit.rs  lower.rs  lower_cse.rs  lower_grad.rs  lower_interval.rs  lower_simplify.rs  lower_units.rs  named_const.rs  numeric.rs  numeric_verified.rs  ode.rs  parser.rs  quadrature_nd.rs  series.rs  simd_eval.rs  simd_vec_math.rs  simplify.rs  smt.rs  solve.rs  solve_poly.rs  special.rs  symreg.rs  system.rs  tensorlogic.rs  tree.rs  units.rs  wasm.rs
src/linalg/: builders.rs  decomp.rs  mod.rs  solve.rs
src/lower/: display.rs  mod.rs  oxiblas.rs  pattern.rs
src/poly/: factor.rs  mod.rs  multivariate.rs  sturm.rs  tests.rs  univariate.rs
src/python/: calculus.rs  mod.rs  numeric.rs  solve.rs  symreg.rs
src/smt/: constraint.rs  helpers.rs  interval.rs  mod.rs  nra.rs  oxiz_backend.rs  smt_tests.rs  tests.rs
src/symreg/: constants.rs  cv.rs  discover.rs  discover_multi.rs  discover_shared.rs  evolution.rs  loss.rs  mcts.rs  mod.rs  numerics.rs  optimize_lm.rs  pareto.rs  pde.rs  post_round.rs  sindy.rs  smt_prune.rs  strlsq.rs  topology.rs  uncertainty.rs
tests/: arc_sharing_test.rs  canonical_test.rs  constant_folding_test.rs  eval_interval_test.rs  grad_proptest.rs  grad_utilities_test.rs  integrate_proptest.rs  lower_cse_test.rs  lower_transcendental_test.rs  lowered_grad_test.rs  ode_test.rs  oxiblas_shared_test.rs  oxiop_malformed_ir_test.rs  roundtrip_test.rs  serde_test.rs  smt_interval_test.rs  smt_issue1_const_ln_operand_test.rs  solve_test.rs  symreg_alloc_parity_test.rs  symreg_constants_test.rs  symreg_eml_tree_consistency_test.rs  symreg_shared_test.rs  symreg_test.rs  tensorlogic_test.rs  units_test.rs
